# agenttrace

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agenttrace/: __init__.py
agenttrace/engine/: agent_trace.py  audit_logger.py  cost_tracker.py  kill_switch.py  policy_engine.py  session.py
agenttrace/integrations/: langchain.py
configs/: demo_policy.yaml
examples/: demo_budget_kill.py  demo_cost_kill.py
tests/: test_core.py
